experimental change to thumbnail display logic to simplify hotlinking

--- a/assets/javascripts/discourse/templates/list/topic-thumbnail.raw.hbs
+++ b/assets/javascripts/discourse/templates/list/topic-thumbnail.raw.hbs
@@ -1,5 +1,9 @@
 <div class="topic-thumbnail">
   <a href='{{topic.url}}'>
-    {{preview-unbound thumbnails category=category opts=opts}}
+    {{#if topic.image_url}}
+      <div class="thumbnail tiles-thumbnail">
+        <img src="{{topic.image_url}}" />
+      </div>
+    {{/if}}
   </a>
 </div>
