--- a/assets/stylesheets/previews_common.scss
+++ b/assets/stylesheets/previews_common.scss
@@ -67,7 +67,7 @@
     }
 
     a.topic-featured-link {
-      display: block;
+      display: inline-block;
       padding-left: 0;
       padding-top: 3px;
     }
