--- a/assets/javascripts/discourse/templates/list/topic-thumbnail.raw.hbs
+++ b/assets/javascripts/discourse/templates/list/topic-thumbnail.raw.hbs
@@ -1,9 +1,5 @@
 <div class="topic-thumbnail">
   <a href='{{topic.url}}'>
-    {{#if topic.image_url}}
-      <div class="thumbnail tiles-thumbnail">
-        <img src="{{topic.image_url}}" />
-      </div>
-    {{/if}}
+    {{preview-unbound thumbnails category=category opts=opts}}
   </a>
 </div>
