--- a/assets/stylesheets/previews_common.scss
+++ b/assets/stylesheets/previews_common.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 //tiles styling  specific styling
 #list-area.tiles-style {
 
@@ -11,42 +12,44 @@
   }
 
   // 1 column on very thin views
-  .tiles-grid-item,
-  .tiles-grid-sizer {
-    @if $max_columns = 1 {
+  .tiles-grid-item {
+    @include cq-prolyfill("width < 461px") {
       width: 100%;
     }
   }
 
-  .tiles-grid[max-width~="461px"] .tiles-grid-item,
-  .tiles-grid[max-width~="461px"] .tiles-grid-sizer {
-    width: 100%;
-  }
-
   // 2 columns on medium widths
-  .tiles-grid[min-width~="461px"] .tiles-grid-item,
-  .tiles-grid[min-width~="461px"] .tiles-grid-sizer {
-    @if $max_columns > 1  {
-      width: calc((100% - 6px)/2);
+  .tiles-grid-item {
+    @include cq-prolyfill("width > 460px") {
+      @if $max_columns > 1  {
+        width: calc((100% - 6px)/2);
+      }
     }
   }
+
   // 3 columns when there is room
-  .tiles-grid[min-width~="761px"] .tiles-grid-item,
-  .tiles-grid[min-width~="761px"] .tiles-grid-sizer {
-    @if $max_columns > 2  {
+  .tiles-grid-item {
+    @include cq-prolyfill("width > 760px") {
+      @if $max_columns > 2  {
         width: calc((100% - 12px)/3);
+      }
     }
   }
 
   // now for featured tiles (with featured tags)
   // Takes up all columns on small to medium spaces
-  .tiles-grid[max-width~="760px"] .tiles-grid-item-width2{
-    width: 100%;
+  .tiles-grid-item-width2 {
+    @include cq-prolyfill("width < 761px") {
+      width: 100%;
+    }
   }
+
   // 2 columns when things are wider
-  .tiles-grid[min-width~="761px"] .tiles-grid-item-width2 {
-    @if $max_columns > 2  {
-      width: calc(67% - 6px);
+  .tiles-grid-item-width2 {
+    @include cq-prolyfill("width > 760px") {
+      @if $max_columns > 2  {
+        width: calc(67% - 6px);
+      }
     }
   }
 
@@ -167,8 +170,21 @@
       max-width: 100%;
       float: left;
       clear: both;
+      /* These are technically the same, but use both */
+      overflow-wrap: break-word;
       word-wrap: break-word;
+
+      -ms-word-break: break-all;
+      /* This is the dangerous one in WebKit, as it breaks things wherever */
       word-break: break-all;
+      /* Instead use this non-standard one: */
+      word-break: break-word;
+
+      /* Adds a hyphen where the word breaks, if supported (No Blink) */
+      -ms-hyphens: auto;
+      -moz-hyphens: auto;
+      -webkit-hyphens: auto;
+      hyphens: auto;
     }
   }
 
