--- a/assets/stylesheets/previews_common.scss
+++ b/assets/stylesheets/previews_common.scss
@@ -6,47 +6,24 @@
     .topic-list-item-separator {
       display: none;
     }
-  }
-
-  .tiles-grid-sizer,
-  .tiles-grid-item {
-    // 1 column on very thin views
-    width: 100%;
-    // 2 columns on medium widths
-    @media screen and (min-width: 501px) and (max-width: 800px) {
-      width: calc((100% - 6px)/2);
-    }
-    // 3 columns when there is room
-    @media screen and (min-width: 801px) {
-      width: calc((100% - 12px)/3);
-    }
+    display: grid;
+    grid-gap: 6px;
+    grid-template-columns: repeat(auto-fill, minmax(260px,1fr));
+    grid-auto-rows: 5px;
   }
 
   .tiles-grid-item-width2 {
-    // for items with featured tags
-    // fill up an entire column for small views
-    width: 100%;
-    // fill up two columns when things are a little larger
-    @media screen and (min-width: 501px) and (max-width: 800px) {
-      width: 100%;
-    }
-    // Take up 2 of the 3 columns when there is even more room
-    @media screen and (min-width: 801px) {
-      width: calc(67% - 6px);
-    }
-  }
 
-  .tiles-gutter-sizer {
-     width: 6px;
-   }
+  }
 
   .tiles-grid-item {
     box-sizing: border-box;
     cursor: pointer;
-    float:top;
-    margin-bottom: 6px;
     border-radius: 3px;
-    padding:10px;
+  }
+
+  .tiles-grid-item-content {
+    padding: 10px;
     display: grid;
     grid-template-columns: 1 1 1 1 auto;
     grid-template-rows: auto auto auto auto auto;
@@ -57,6 +34,8 @@
      "tags tags tags tags tags"
      "meta meta meta meta actions"
   }
+
+
 
   .tiles-grid-item:hover {
     background-color: darken($secondary, 2%);
