--- a/assets/stylesheets/previews_mobile.scss
+++ b/assets/stylesheets/previews_mobile.scss
@@ -62,41 +62,24 @@ img.thumbnail:not(.tiles-thumbnail) {
     .topic-list-item-separator {
       display: none;
     }
+    display: grid;
+    grid-gap: 6px;
+    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
+    grid-auto-rows: 10px;
   }
 
-  .tiles-grid-sizer,
-  .tiles-grid-item {
-    // 1 column on very thin views
-    width: 100%;
-    // 2 columns on medium widths
-    @media screen and (min-width: 401px) and (max-width: 800px) {
-      width: calc((100% - 6px)/2);
-    }
-    // 3 columns when there is room
-    @media screen and (min-width: 801px) {
-      width: calc((100% - 12px)/3);
-    }
-    // iPhone 6/7/8 Plus
-    @media only screen
-        and (device-width : 414px)
-        and (device-height : 736px)
-        and (-webkit-device-pixel-ratio : 3)
-        and (orientation : portrait)  {
-    width: 100%;
-    }
-  }
+  .tiles-grid-item-width2 {
 
-  .tiles-gutter-sizer {
-     width: 6px;
-   }
+  }
 
   .tiles-grid-item {
     box-sizing: border-box;
     cursor: pointer;
-    float:top;
-    margin-bottom: 6px;
     border-radius: 3px;
-    padding:10px;
+  }
+
+  .tiles-grid-item-content {
+    padding: 10px;
     display: grid;
     grid-template-columns: 1 1 1 1 auto;
     grid-template-rows: auto auto auto auto auto;
