--- a/assets/stylesheets/previews_common.scss
+++ b/assets/stylesheets/previews_common.scss
@@ -9,11 +9,14 @@
     display: grid;
     grid-gap: 6px;
     grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
-    grid-auto-rows: 10px;
+    grid-auto-rows: 20px;
   }
 
   .tiles-grid-item-width2 {
-
+    box-sizing: border-box;
+    cursor: pointer;
+    border-radius: 3px;
+    grid-column-end: span 2;
   }
 
   .tiles-grid-item {
