--- a/assets/javascripts/discourse/templates/components/featured-topics.hbs
+++ b/assets/javascripts/discourse/templates/components/featured-topics.hbs
@@ -1,5 +1,5 @@
-{{#unless site.mobileView}}
+{{#if notMobile}}
   {{#if model.featured_topics}}
     {{tlp-featured-topics featuredTopics=model.featured_topics}}
   {{/if}}
-{{/unless}}
+{{/if}}
